# src/api/index.js
@@ -33,6 +33,9 @@ const health = require('./health')
 const bulkQuotes = require('./bulkQuotes')
 const bulkQuotesById = require('./bulkQuotes/{id}')
 const bulkQuotesErrorById = require('./bulkQuotes/{id}/error')
+const fxQuotes = require('./fxQuotes')
+const fxQuotesById = require('./fxQuotes/{id}')
+const fxQuotesErrorById = require('./fxQuotes/{id}/error')
 const metrics = require('./metrics')
 
 module.exports = {
@@ -46,6 +49,10 @@ module.exports = {
   BulkQuotesByIdGet: bulkQuotesById.get,
   BulkQuotesByIdPut: bulkQuotesById.put,
   BulkQuotesPost: bulkQuotes.post,
+  FXQuotesErrorByIdPut: fxQuotesErrorById.put,
+  FXQuotesByIdGet: fxQuotesById.get,
+  FXQuotesByIdPut: fxQuotesById.put,
+  FXQuotesPost: fxQuotes.post,
   validationFail: OpenapiBackend.validationFail,
   notFound: OpenapiBackend.notFound,
   methodNotAllowed: OpenapiBackend.methodNotAllowed
